2011-03-16  Ryan S. Arnold  <rsa@us.ibm.com>

	* sysdeps/powerpc/powerpc32/power6/fpu/s_isnanf.S (isnanf): Fix
	END(__isnan) to END(__isnanf) to match function entry point/label
	EALIGN(__isnanf,...).

2011-03-10  Jakub Jelinek  <jakub@redhat.com>

	* wcsmbs/wchar.h (wmemcmp): Remove __restrict qualifiers.

2011-03-10  Ulrich Drepper  <drepper@gmail.com>

	[BZ #12510]
	* elf/dl-lookup.c (do_lookup_x): For copy relocations of unique objects
	copy from the symbol referenced in the relocation to initialize the
	used variable.
	Patch by Piotr Bury <pbury@goahead.com>.
	* elf/Makefile: Add rules to build and tst-unique3.
	* include/bits/dlfcn.h: Remove _dl_mcount_wrapper_check declaration.
	* elf/tst-unique3.cc: New file.
	* elf/tst-unique3.h: New file.
	* elf/tst-unique3lib.cc: New file.
	* elf/tst-unique3lib2.cc: New file.

	* elf/Makefile: Don't run tst-execstack* tests of SELinux is enabled.

2011-03-10  Mike Frysinger  <vapier@gentoo.org>

	* sysdeps/sparc/sparc64/elf/configure.in (libc_cv_sparc64_tls): Add
	$LDFLAGS and -nostdlib -nostartfiles to linking step.  Change main
	to _start.

2011-03-06  Ulrich Drepper  <drepper@gmail.com>

	* elf/dl-load.c (_dl_map_object): If we are looking for the first
	to-be-loaded object along a path to loader is ld.so.

2011-03-02  Harsha Jagasia  <harsha.jagasia@amd.com>
	    Ulrich Drepper  <drepper@gmail.com>

	* sysdeps/x86_64/memset.S: After aligning destination, code
	branches to different locations depending on the value of
	misalignment, when multiarch is enabled. Fix this.

2011-03-02  Harsha Jagasia  <harsha.jagasia@amd.com>

	* sysdeps/x86_64/cacheinfo.c (init_cacheinfo):
	Set _x86_64_preferred_memory_instruction for AMD processsors.
	* sysdeps/x86_64/multiarch/init-arch.c (__init_cpu_features):
	Set bit_Prefer_SSE_for_memop for AMD processors.

2011-03-04  Ulrich Drepper  <drepper@gmail.com>

	* libio/fmemopen.c (fmemopen): Optimize a bit.

2011-03-03  Andreas Schwab  <schwab@redhat.com>
